tests/NormalTests/paczka1/fuzzy1/66821137.err
Error in line 11: A43 A43 27,2
Error in line 12: A43 S334 87,5
Error in line 22: fNDlvAEYP S60 67,6
Error in line 23: Z13Cu4vM S60 1,3
Error in line 35: Z13Cu4vM S595 49,1
